[project]
name = "scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "langchain-community>=0.3.11",
    "langchain>=0.3.11",
    "loguru>=0.7.3",
    "scrapingant-client>=2.1.0",
    "tqdm>=4.67.1",
]
